Fix words with an apostrophe
Signed-off-by: SZanko <szanko_dev@proton.me>